2021-04-07 - removed genotypic and phenotypic fidelity, update plots

--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -44,7 +44,7 @@ These dynamics appear to be driven by the stabilizing effect that adaptive plast
 \subsection{The rate of evolutionary change}
 
 % -- Adaptively plastic populations underwent less evolutionary change than non-plastic populations --
-Adaptively plastic populations experienced fewer selective sweeps and fewer total genetic changes relative to non-plastic populations evolving under the same environmental conditions (Figure \ref{fig:evolutionary-dynamics}).
+Adaptively plastic populations experienced fewer selective sweeps and fewer total genetic changes relative to non-plastic populations evolving under the same environmental conditions (Figure \ref{fig:evolutionary-dynamics-magnitude}).
 Plastic populations adapted to the fluctuating environmental regime by evolving to sense environmental changes and regulate their metabolism (task performance) in response to such changes, which also stabilized these populations against fluctuations.
 Indeed, across all three of our experiments, the evolutionary dynamics of plastic populations were more similar to that of populations evolving in a static environment than to that of non-plastic populations evolving in an identical fluctuating environment.
 
@@ -53,7 +53,7 @@ Adaptive phenotypes in ENV-A were maladaptive in ENV-B and vice versa.
 As such, non-plastic generalists that performed all tasks or performed no tasks at all did not evolve in any of the fluctuating environmental regimes.
 Selection against non-plastic generalists may be attributed to competition with phenotypic specialists that have a much larger fitness advantage for performing environment-specific tasks.
 In non-plastic populations where plasticity was disallowed, we hypothesize that strong selection on task specialization after each environmental change drove the repeated fixation of beneficial mutations (that alter an organism's phenotypic profile).
-This hypothesis is supported by the increased frequency of coalescence events in these populations (Figure \ref{fig:evolutionary-dynamics}) as well as increased rates of genetic and phenotypic changes observed along the lineages of non-plastic organisms. 
+This hypothesis is supported by the increased frequency of coalescence events in these populations (Figure \ref{fig:evolutionary-dynamics-rate}) as well as increased rates of genetic and phenotypic changes observed along the lineages of non-plastic organisms. 
 
 % --> [Architecture results] <--
 Analysis of the evolved genetic architectures further supports our hypothesis that the non-plastic populations relied on mutations to continuously readapt to the fluctuating environment. 
@@ -96,8 +96,8 @@ Indeed, both theoretical and empirical studies have shown that adaptive plastici
 \subsection{The evolution and maintenance of novel tasks}
 
 % -- Exploration + Exploitation --
-In fluctuating environments, non-plastic populations explored a larger area of the fitness landscape than adaptively plastic populations, as measured by the number of novel task discovery (Figure \ref{fig:complex-traits}b).
-Despite lower overall novel task discovery in adaptively plastic populations, they better exploited the fitness landscape, retaining a greater number of novel tasks than non-plastic populations evolving under identical environmental conditions (Figure \ref{fig:complex-traits}a).
+In fluctuating environments, non-plastic populations explored a larger area of the fitness landscape than adaptively plastic populations, as measured by the number of novel task discovery (Figure \ref{fig:complex-traits-magnitude}b).
+Despite lower overall novel task discovery in adaptively plastic populations, they better exploited the fitness landscape, retaining a greater number of novel tasks than non-plastic populations evolving under identical environmental conditions (Figure \ref{fig:complex-traits-magnitude}a).
 Evolution in non-plastic populations was dominated by numerous bouts of strong directional selection, driven by repeated environmental change.
 % This effect was driven by repeated environmental changes; 
 After each change, the performance of the six base tasks needed to be realigned to the environment. 
@@ -153,7 +153,7 @@ However, when a beneficial mutation sweeps to fixation in a clonal population, i
 
 % Across our experiments, the rapid frequency of selective sweeps in non-plastic populations that evolved in changing environments afforded more opportunities for genetic hitchhiking than that of populations evolving under other treatments. 
 Across our experiments, the frequency of selective sweeps in non-plastic populations provided additional opportunities for genetic hitchhiking with each environmental change. 
-Indeed, representative lineages from non-plastic populations in the cyclic environment exhibited higher mutation accumulation (Figure~\ref{fig:evolutionary-dynamics}b), novel trait loss (Figure~\ref{fig:complex-traits}c), and deleterious instruction accumulation (Figure~\ref{fig:deleterious-hitchhiking}) than their plastic counterparts.
+Indeed, representative lineages from non-plastic populations in the cyclic environment exhibited higher mutation accumulation (Figure~\ref{fig:evolutionary-dynamics-magnitude}b), novel trait loss (Figure~\ref{fig:complex-traits-magnitude}c), and deleterious instruction accumulation (Figure~\ref{fig:deleterious-hitchhiking}) than their plastic counterparts.
 In aggregate, we found that many ($\sim$49\%; 956 / 1916) mutations that increased \code{poison} instruction execution in offspring co-occurred with mutations that provided an even stronger benefit by adapting the offspring to an environmental change.
 This rate of co-occurrence is conservative because we did not analyze mutations that became linked in different generations.
 
