--- a/tex/figures/architecture_locus_change_time.tex
+++ b/tex/figures/architecture_locus_change_time.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h!]
+\begin{figure}[ht!]
     \centering
     \includegraphics[width=0.33\textwidth]{media/architecture/avg_time_between_func_changes_weighted_mean.pdf}
     \caption{\small
