--- a/tex/figures/metrics-definitions.tex
+++ b/tex/figures/metrics-definitions.tex
@@ -105,7 +105,7 @@ Number of instances along a given lineage where a mutation causes an offspring p
 
 \setlength{\tabcolsep}{16pt}
 \renewcommand{\arraystretch}{1.5}
-\begin{table}[h]
+\begin{table}[ht]
     \centering
     
     \rowcolors{2}{gray!25}{white}
@@ -117,8 +117,8 @@ Number of instances along a given lineage where a mutation causes an offspring p
         \SweepsMetricName & \SweepsMetricDesc \\
         \MutationCountMetricName & \MutationCountMetricDesc \\
         \PhenotypicVolatilityMetricName & \PhenotypicVolatilityMetricDesc \\
-        \GenotypicFidelityMetricName &         \GenotypicFidelityMetricDesc \\
-        \PhenotypicFidelityMetricName &         \PhenotypicFidelityMetricDesc \\
+        % \GenotypicFidelityMetricName &         \GenotypicFidelityMetricDesc \\
+        % \PhenotypicFidelityMetricName &         \PhenotypicFidelityMetricDesc \\
         \MutationalStabilityMetricName & \MutationalStabilityMetricDesc \\
         % (architecture metric(s)) & \\
         \TaskPerformanceMetricName & \TaskPerformanceMetricDesc \\
