--- a/tex/figures/poison-accumulation-panel.tex
+++ b/tex/figures/poison-accumulation-panel.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h!]
+\begin{figure}[ht!]
     \centering
     \includegraphics[width=1.0\textwidth]{media/poison-accumulation-panel.pdf}
     \caption{\small
