--- a/tex/figures/reaction-norms.tex
+++ b/tex/figures/reaction-norms.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h!]
+\begin{figure}[ht!]
     \centering
     \includegraphics[width=\textwidth]{media/reaction-norms.pdf}
     \caption{\small
