--- a/tex/scratch.tex
+++ b/tex/scratch.tex
@@ -633,3 +633,22 @@ We conducted a series of experiments using Avida to investigate how the evolutio
 
 % Conversely, we expect fluctuating conditions to continuously knock populations off fitness peaks, thus producing lineages with low fidelity and frequent coalescence events as populations continually readapt.
 %Under fluctuating conditions, however, only plastic lineages are able to maintain high fitness and mutational stability.
+
+% -- mutations affect phenotypes --
+%   - IDEA: Terms for over 30 years working with digital evolution
+
+
+% the nature of the evolutionary changes observed under the PLASTIC, NON-PLASTIC, and STATIC treatment regimes.
+% Specifically, we performed knockout experiments to characterize evolved genetic architectures.
+% genetic architectures of representative organisms and how those architectures changed over time.
+% Mutational stability combines the information from genotypic and phenotypic fidelity, measuring the proportion of \textit{mutated} offspring whose phenotypic profile matches that of their parent; that is, how often do mutations actually effect phenotypic changes along a given lineage?
+% For example, lineages that exhibit frequent mutationally-induced phenotypic changes will have low mutational stability relative to lineages that exhibit little to no mutationally-induced phenotypic changes.
+
+% Consistent with both genotypic and phenotypic fidelity, we found that both STATIC and PLASTIC lineages exhibited high mutational stability relative to that of NON-PLASTIC lineages (corrected Wilcoxon rank-sum tests, PLASTIC: p $<10^{-4}$; STATIC: p $<10^{-4}$).
+% [Specifically, non-plastic offspring more often had a different phenotype (mean +- std dev)].
+% We also found that STATIC lineages exhibited higher mutational stability than PLASTIC lineages (corrected Wilcoxon rank-sum test, p $<10^{-4}$), which we hypothesized was due to the possibility for cryptic variation to manifest in the off-environment phenotypes of plastic organisms. 
+% We found that STATIC lineages exhibited a small, but significant
+% Because our 
+% While mutational stability for PLASTIC and STATIC lineages is higher than that of NON-PLASTIC lineages, we found that STATIC lineages exhibit a small, but significant, difference in mutational stability relative to PLASTIC lineages [stats]. 
+% Overall, there were few instances of mutations that caused a change in phenotypic profile across all PLASTIC lineages.
+% However, of these mutations, we found that over 80\% (83 out of 102) of changes to phenotypic profiles was cryptic; that is, they occurred in traits that would not have been expressed when the organism was alive but would have been expressed if the environment changed.
