--- a/tex/results.tex
+++ b/tex/results.tex
@@ -9,10 +9,10 @@
 
 \subsection{The evolution of adaptive phenotypic plasticity slows evolutionary change in fluctuating environments}
 
-\input{tex/figures/evolutionary-change-panel}
+% \input{tex/figures/evolutionary-change-panel}
 
-\input{tex/figures/architecture_locus_functionality}
-\input{tex/figures/architecture_locus_change_time}
+\input{tex/figures/evolutionary-change-magnitude-panel}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Results to report (2021-02-08 experiment)
@@ -66,82 +66,43 @@
 %  - Selective sweeps
 %  - Mutation accumulation
 %  - Phenotypic volatility
-%  - Number of generations elapsed
 In experimental \hyperref[sec:methods:exp:evolutionary-change-rate]{phase 2A},
 we tested whether the evolution of adaptive phenotypic plasticity constrained or promoted subsequent evolutionary change in a fluctuating environment. 
-First, we compared the total amount of evolutionary change in populations evolved under the PLASTIC, NON-PLASTIC, and STATIC treatments as measured by  coalescence event count, mutation count, and phenotypic volatility (Figure \ref{fig:evolutionary-dynamics}).
+First, we compared the total amount of evolutionary change in populations evolved under the PLASTIC, NON-PLASTIC, and STATIC treatments as measured by coalescence event count, mutation count, and phenotypic volatility (Figure \ref{fig:evolutionary-dynamics-magnitude}).
 According to each of these metrics, NON-PLASTIC populations experienced a larger magnitude of evolutionary change than either PLASTIC or STATIC populations.
-We observed significantly higher coalescence event counts in NON-PLASTIC populations than in PLASTIC or STATIC populations (Figure \ref{fig:evolutionary-dynamics}\hyperref[fig:evolutionary-dynamics]{a}).
-NON-PLASTIC lineages had significantly higher mutation counts (Figure \ref{fig:evolutionary-dynamics}b) and phenotypic volatility than PLASTIC or STATIC lineages (Figure \ref{fig:evolutionary-dynamics}c).
+We observed significantly higher coalescence event counts in NON-PLASTIC populations than in PLASTIC or STATIC populations (Figure \ref{fig:evolutionary-dynamics-magnitude}\hyperref[fig:evolutionary-dynamics-magnitude]{a}).
+NON-PLASTIC lineages had significantly higher mutation counts (Figure \ref{fig:evolutionary-dynamics-magnitude}b) and phenotypic volatility than PLASTIC or STATIC lineages (Figure \ref{fig:evolutionary-dynamics-magnitude}c).
 
 % -- Elapsed generations --
-Changing environments have been shown to increase generational turnover in Avida populations \citep{canino-koning_evolution_2016}, which could explain why we observe a larger magnitude of evolutionary change at the end of 200,000 updates of evolution in NON-PLASTIC populations. % because ... large fitness differentials... 
-Indeed, we found that significantly more generations of evolution elapsed in NON-PLASTIC populations (mean of $41090\pm2702$ std. dev.) than in PLASTIC (mean of $31016\pm2615$ std. dev.) or STATIC (mean of $30002\pm3011$ std. dev.) populations during phase 2A (corrected Wilcoxon rank-sum tests, p $<10^{-4}$) %, PLASTIC: p $<10^{-4}$; STATIC: p $<10^{-4}$).
-
-% Additionally, we found that significantly more generations of evolution elapsed in NON-PLASTIC populations (mean of $41090\pm2702$ std. dev.) than in PLASTIC (mean of $31016\pm2615$ std. dev.) or STATIC (mean of $30002\pm3011$ std. dev.) populations during phase 2A (corrected Wilcoxon rank-sum tests, PLASTIC: p $<10^{-4}$; STATIC: p $<10^{-4}$).
-%; that is, NON-PLASTIC populations exhibited a higher rate of generational turnover (mean of $41090\pm2702$ std. dev.) than PLASTIC (mean of $31016\pm2615$ std. dev.) or STATIC (mean of $30002\pm3011$ std. dev.) populations in the given 200,000 Avida updates.
+Changing environments have been shown to increase generational turnover in Avida populations \citep{canino-koning_evolution_2016}, which could explain why we observe a larger magnitude of evolutionary change at the end of 200,000 updates of evolution in NON-PLASTIC populations. 
+Indeed, we found that significantly more generations of evolution elapsed in NON-PLASTIC populations (mean of $41090\pm2702$ std. dev.) than in PLASTIC (mean of $31016\pm2615$ std. dev.) or STATIC (mean of $30002\pm3011$ std. dev.) populations during phase 2A (corrected Wilcoxon rank-sum tests, p $<10^{-4}$).
 
 % -- Rate of evolutionary change => intuition --
-%   - Rate of sweeps => (generations per sweep)
-%   - genotypic fidelity => frequency that offspring's genotype is identical to parent genotype (lineage length / number generations)
-%   - phenotypic fidelity => frequency that an offspring's phenotype is same as parent's phenotype (phenotypic volatility / number of generations)
 To evaluate whether increased generational turnover explains the greater magnitude of evolutionary change in NON-PLASTIC populations, we examined the average number of generations between coalescence events and the mutational stability of lineages (Table \ref{tab:metrics-definitions}).
-% the \textit{rate} of evolutionary change in PLASTIC, STATIC, and NON-PLASTIC populations. 
-% Specifically, we calculated the average number of generations between coalescence events and mutational stability (Table \ref{tab:metrics-definitions}).
-% The rate that coalescence events occur can indicate the strength of selection \citep{dolson_interpreting_2020}.
-% For example, we would expect populations evolving under strong directional selection to experience more rapid coalescence events than populations evolving under weak selection pressure.
 A coalescence event indicates a selective sweep, which is a hallmark of adaptive evolutionary change.
-% Genotypic and phenotypic fidelity measure the frequency that an offspring's genotype or phenotype is identical to that of its parent along a given lineage.
 Mutational stability measures the frequency that mutations cause phenotypic changes along a lineage.
-% We hypothesize that the STATIC treatment produces highly fit genotypes that no longer undergo rapid adaptive change and hence do not trigger frequent coalescence events.
 We expect that static conditions should favor fit lineages with high mutational stability that no longer undergo rapid adaptive change and hence do not trigger frequent coalescence events.
 Under fluctuating conditions, however, lineages must be composed of plastic organisms if they are to maintain high fitness and mutational stability.
 Without plasticity, we expect these conditions to produce lineages with low stability and frequent coalescence events as populations must continually readapt.
 
-% Given , the lineages of organisms evolved in static conditions should exhibit high genotypic and phenotypic fidelity.
-
-% and have high genotypic and phenotypic fidelity.
-% than those evolved under changing conditions, as changing conditions require populations to continuously adapt.
-
-% if more selective sweeps occurred, indication of adaptive evolution 
-% adaptive evolutionary change
+% --- BOOKMARK ---
+\input{tex/figures/evolutionary-change-pace-panel}
 
 % -- Rate of evolutionary change => findings --
-On average, significantly fewer generations elapsed between coalescence events in NON-PLASTIC populations than in either PLASTIC or STATIC populations (Figure \ref{fig:evolutionary-dynamics}d).
-We also observed that PLASTIC and STATIC lineages had significantly higher genotypic and phenotypic fidelity than NON-PLASTIC lineages (Figure \ref{fig:evolutionary-dynamics}e and \ref{fig:evolutionary-dynamics}f, respectively); that is, offspring were identical to their parent more often in the PLASTIC and STATIC regimes than in the NON-PLASTIC regime.
+On average, significantly fewer generations elapsed between coalescence events in NON-PLASTIC populations than in either PLASTIC or STATIC populations (Figure \ref{fig:evolutionary-dynamics-rate}a).
+% We also observed that PLASTIC and STATIC lineages had significantly higher genotypic and phenotypic fidelity than NON-PLASTIC lineages (Figure \ref{fig:evolutionary-dynamics}e and \ref{fig:evolutionary-dynamics}f, respectively); that is, offspring were identical to their parent more often in the PLASTIC and STATIC regimes than in the NON-PLASTIC regime.
+We also found that both STATIC and PLASTIC lineages exhibited higher mutational stability relative to that of NON-PLASTIC lineages (Figure \ref{fig:evolutionary-dynamics-rate}b); that is, mutations more often caused phenotypic changes along NON-PLASTIC lineages. 
 Overall, our results indicate that NON-PLASTIC populations underwent more rapid (and thus a greater amount of) evolutionary changes than either PLASTIC or STATIC populations. 
 
-% -- mutations affect phenotypes --
-%   - fraction of mutational steps that alter (aggregate) phenotype
-%   - fraction of phenotype-altering mutation steps that alter unexpressed phenotype (PLASTIC condition only)
-%   - fraction of mutations that affect unexpressed phenotype that are deleterious (PLASTIC only)
-%   - fraction of mutations that affect unexpressed phenotype that are beneficial (PLASTIC only)
-% @AML: TODO - update with mutational stability
-%   - IDEA: Terms for over 30 years working with digital evolution
+% -- Mutational stability in static and plastic lineages --
+While both STATIC and PLASTIC lineages both exhibited high mutational stability, we found that STATIC lineages exhibited higher mutational stability than PLASTIC lineages (Figure \ref{fig:evolutionary-dynamics-rate}b). 
+Overall, there were few instances of mutations that caused a change in phenotypic profile across all PLASTIC lineages.
+However, of these mutations, we found that over 80\% (83 out of 102) of changes to phenotypic profiles were cryptic, as they occurred in traits that would not have been expressed when the organism was alive but would have been expressed if the environment changed.
 
-
-% the nature of the evolutionary changes observed under the PLASTIC, NON-PLASTIC, and STATIC treatment regimes.
-% Specifically, we performed knockout experiments to characterize evolved genetic architectures.
-% genetic architectures of representative organisms and how those architectures changed over time.
-% Mutational stability combines the information from genotypic and phenotypic fidelity, measuring the proportion of \textit{mutated} offspring whose phenotypic profile matches that of their parent; that is, how often do mutations actually effect phenotypic changes along a given lineage?
-% For example, lineages that exhibit frequent mutationally-induced phenotypic changes will have low mutational stability relative to lineages that exhibit little to no mutationally-induced phenotypic changes.
-
-% Consistent with both genotypic and phenotypic fidelity, we found that both STATIC and PLASTIC lineages exhibited high mutational stability relative to that of NON-PLASTIC lineages (corrected Wilcoxon rank-sum tests, PLASTIC: p $<10^{-4}$; STATIC: p $<10^{-4}$).
-% [Specifically, non-plastic offspring more often had a different phenotype (mean +- std dev)].
-% We also found that STATIC lineages exhibited higher mutational stability than PLASTIC lineages (corrected Wilcoxon rank-sum test, p $<10^{-4}$), which we hypothesized was due to the possibility for cryptic variation to manifest in the off-environment phenotypes of plastic organisms. 
-% We found that STATIC lineages exhibited a small, but significant
-% Because our 
-% While mutational stability for PLASTIC and STATIC lineages is higher than that of NON-PLASTIC lineages, we found that STATIC lineages exhibit a small, but significant, difference in mutational stability relative to PLASTIC lineages [stats]. 
-% Overall, there were few instances of mutations that caused a change in phenotypic profile across all PLASTIC lineages.
-% However, of these mutations, we found that over 80\% (83 out of 102) of changes to phenotypic profiles was cryptic; that is, they occurred in traits that would not have been expressed when the organism was alive but would have been expressed if the environment changed.
+\input{tex/figures/architecture_locus_functionality}
+\input{tex/figures/architecture_locus_change_time}
 
 % -- genetic architectures --
-% - Since we're looking at the phenotypic profile, we see that STATIC and PLASTIC treatments perform tasks in both environments while NON-PLASTIC only perform tasks from one environment
-    % - Like we'd expect!
-% - Additionally, we see substantial vestigial task machinery in the NON-PLASTIC treatment, showing that a small number of mutations can cause the task profile to flip environments
-% - Indeed, we see that the NON-PLASTIC treatment sees loci functionality change much more frequently. 
-
-% --- BOOKMARK ---
 Next, we performed knockout experiments to investigate how genetic architectures evolved under the PLASTIC, NON-PLASTIC, and STATIC treatment regimes.
 Figure \ref{fig:architecture_locus_functionality} shows the functionality of each locus in the most abundant genotype of the final population, using a representative sample from each treatment. 
 PLASTIC and STATIC genomes perform tasks in both environments, while the NON-PLASTIC genome only performs tasks in the B environment.
@@ -154,7 +115,7 @@ This supports our hypothesis that the fluctuating environment forces NON-PLASTIC
 % -- in general, PLASTIC and STATIC more similar than NON-PLASTIC --
 In general, the evolution of adaptive plasticity stabilized PLASTIC treatment populations against environmental fluctuations, and their evolutionary dynamics more closely resembled those of populations evolving in a static environment.
 We observed no significant difference in the number and frequency of coalescence events in PLASTIC and STATIC populations.
-We did, however, observe small, but statistically significant, differences in each of elapsed generations, mutation counts, genotypic fidelity, phenotypic fidelity, and mutational stability between PLASTIC and STATIC populations (see supplemental material \citealt{supplemental_material}).
+We did, however, observe small, but statistically significant, differences in each of elapsed generations, mutation counts, and mutational stability between PLASTIC and STATIC populations (see supplemental material \citealt{supplemental_material}).
 
 \vspace{0.5cm}
 \subsection{Adaptively plastic populations retain more novel tasks than non-plastic populations in fluctuating environments}
@@ -183,7 +144,7 @@ We did, however, observe small, but statistically significant, differences in ea
 %   - NON-PLASTIC [0.0022026054610079] > STATIC [0.000161396283669756] > PLASTIC [6.25141973661864e-05]
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\input{tex/figures/novel-tasks-panel}
+\input{tex/figures/novel-tasks-magnitude-panel}
 
 % [Environmental change has been shown to drive evolutionary change and promote evolutionary exploration in non-plastic populations as compared to populations evolving in an unchanging environment \citep{zaman_coevolution_2014,nahum_improved_2017}.]
 % [If so, does adaptive plasticity negate the [effects of environmental change on evolutionary exploration]? 
@@ -200,14 +161,16 @@ But, how much of the evolutionary change in NON-PLASTIC-treatment populations is
 %   - task discovery
 %   - task loss
 % Adaptive phenotypic plasticity evolved in \novelTraitsPlasticReps\ of \novelTraitsReplicates\ replicates from the PLASTIC treatment during phase one of Experiment II; we used this more limited group to seed the \novelTraitsPlasticReps\ phase-two PLASTIC replicates.
-Figure \ref{fig:complex-traits} shows the final novel task count, novel task discovery, and novel task loss for the PLASTIC, NON-PLASTIC, and STATIC treatments.
+Figure \ref{fig:complex-traits-magnitude} shows the final novel task count, novel task discovery, and novel task loss for the PLASTIC, NON-PLASTIC, and STATIC treatments.
 Final novel task count measures the number of novel tasks performed by a representative organism in the final population of each replicate, which indicates how well the final population exploits the fitness landscape.
 Novel task discovery is the number of types of novel tasks ever performed by an organism along a representative lineage, which sheds light on how well lineages explore the fitness landscape. 
 Finally, novel task loss is the number of times along a representative lineage that a novel task is performed by a parent but not its offspring, which measures a lineage's capacity to maintain novel tasks. 
 
-We found that both PLASTIC and STATIC populations had significantly higher final task counts than NON-PLASTIC populations at the end of the experiment (Figure~\ref{fig:complex-traits}a).
-This, however, was not due to PLASTIC and STATIC lineages exploring a larger breadth of the fitness landscape, as NON-PLASTIC lineages exhibited significantly higher novel task discovery than either PLASTIC or STATIC lineages (Figure~\ref{fig:complex-traits}b).
-Indeed, we found that NON-PLASTIC lineages repeatedly failed to retain evolved novel tasks, exhibiting significantly higher novel task loss than either PLASTIC or STATIC lineages (Figure~\ref{fig:complex-traits}c).
+We found that both PLASTIC and STATIC populations had significantly higher final task counts than NON-PLASTIC populations at the end of the experiment (Figure~\ref{fig:complex-traits-magnitude}a).
+This, however, was not due to PLASTIC and STATIC lineages exploring a larger breadth of the fitness landscape, as NON-PLASTIC lineages exhibited significantly higher novel task discovery than either PLASTIC or STATIC lineages (Figure~\ref{fig:complex-traits-magnitude}b).
+Indeed, we found that NON-PLASTIC lineages repeatedly failed to retain evolved novel tasks, exhibiting significantly higher novel task loss than either PLASTIC or STATIC lineages (Figure~\ref{fig:complex-traits-magnitude}c).
+
+\input{tex/figures/novel-tasks-rate-panel}
 
 % - Rates of exploration/exploitation -
 %  - tasks discovered per generation(?)
@@ -215,9 +178,9 @@ Indeed, we found that NON-PLASTIC lineages repeatedly failed to retain evolved n
 As noted previously, a larger number of generations elapsed in NON-PLASTIC populations than in PLASTIC or STATIC populations during our experiment.
 Are NON-PLASTIC lineages discovering and losing novel tasks more frequently than PLASTIC or STATIC lineages, or are our observations a result of differences in generational turnover?
 To tease this apart, we examined the frequencies of novel task discovery and novel task loss along representative lineages by dividing novel task discovery and novel task loss measurements by the number of elapsed generations.
-We found no significant difference in the frequency of novel task discovery between NON-PLASTIC and STATIC lineages, and we found that PLASTIC lineages had a lower frequency of novel task discovery than STATIC lineages (Figure~\ref{fig:complex-traits}d).
+We found no significant difference in the frequency of novel task discovery between NON-PLASTIC and STATIC lineages, and we found that PLASTIC lineages had a lower frequency of novel task discovery than STATIC lineages (Figure~\ref{fig:complex-traits-rate}a).
 Therefore, we cannot reject the possibility that the larger magnitude of task discovery in NON-PLASTIC lineages was driven by a larger number of elapsed generations.
-NON-PLASTIC lineages had a higher frequency of task loss than either PLASTIC or STATIC lineages, and PLASTIC lineages tended to have a lower frequency of novel task loss than STATIC lineages (Figure~\ref{fig:complex-traits}e). 
+NON-PLASTIC lineages had a higher frequency of task loss than either PLASTIC or STATIC lineages, and PLASTIC lineages tended to have a lower frequency of novel task loss than STATIC lineages (Figure~\ref{fig:complex-traits-rate}b). 
 
 % We computed the per-generation rate of task discovery along dominant lineages and the per-generation rate of task loss along those same lineages.
 % small, but significant, per-generation task discovery rate than NON-PLASTIC or STATIC lineages [stats].
@@ -262,7 +225,7 @@ In contrast, across all PLASTIC and STATIC dominant lineages, we observed that a
 % the lineages of adaptively plastic organisms accumulate more deleterious \code{poison} instructions than that of non-plastic lineages.
 Phenotypic plasticity allows for possibility of accumulating of genetic variation in genomic regions that are unexpressed under contemporary environmental conditions, which could lead to the fixation of deleterious instructions in PLASTIC-treatment populations.
 However, our results thus far indicate that PLASTIC-treatment populations accumulate \textit{fewer} deleterious mutations than NON-PLASTIC treatment populations in fluctuating environments.
-That is, NON-PLASTIC lineages accumulated more total genetic changes (Figure \ref{fig:evolutionary-dynamics}), and the high rates of novel task loss in NON-PLASTIC lineages (Figure \ref{fig:complex-traits}) may also indicate their increased susceptibility to accumulating deleterious mutations relative to PLASTIC lineages.
+That is, NON-PLASTIC lineages accumulated more total genetic changes (Figure \ref{fig:evolutionary-dynamics-magnitude}), and the high rates of novel task loss in NON-PLASTIC lineages (Figure \ref{fig:complex-traits-rate}) may also indicate their increased susceptibility to accumulating deleterious mutations relative to PLASTIC lineages.
 
 In experimental phase 2C, we tested whether the evolution of adaptive phenotypic plasticity increases deleterious instruction accumulation in genomes by measuring poisonous task performance in representative organisms and along representative lineages. 
 Organisms can perform the poisonous task by executing a \code{poison} instruction, which reduces their fitness. 
